--- a/packages/common-sass/src/scss/_button.scss
+++ b/packages/common-sass/src/scss/_button.scss
@@ -30,3 +30,12 @@ button:disabled {
 .btn-action{
   padding:0.75rem 2rem;
 }
+
+.btn-small-action{
+  padding:0.75rem 2rem;
+  
+}
+
+.upload-button{
+  width:150px;
+}
