--- a/packages/common-sass/src/scss/_close.scss
+++ b/packages/common-sass/src/scss/_close.scss
@@ -1,7 +1,7 @@
 .close {
     float: right;
     @include font-size(22px);
-    font-weight: $close-font-weight;
+    font-weight: 300;
     line-height: 1;
     color: $white;
     text-shadow: $close-text-shadow;
