--- a/packages/common-sass/src/scss/custom.scss
+++ b/packages/common-sass/src/scss/custom.scss
@@ -14,7 +14,7 @@
 
 
 // Custom Mixins
-@import "custom-mixins";
+//@import "custom-mixins";
 
 // Custom Utility classes
 @import "custom-utilities";
@@ -33,10 +33,6 @@
 @import "./navs";
 @import "./pagination";
 @import "./tooltip";
-
-
-
-
 
 
 // @import "./aside";
