--- a/packages/common-sass/src/scss/_messages.scss
+++ b/packages/common-sass/src/scss/_messages.scss
@@ -55,7 +55,7 @@
     color: $danger;
 }
 
-.add-profile,.menu-list-wrapper ,.assign-previledge{
+.add-container,.menu-list-wrapper ,.assign-previledge{
     .filter-message {
         padding: 100px 15px;
 
