--- a/packages/common-sass/src/scss/_topbar.scss
+++ b/packages/common-sass/src/scss/_topbar.scss
@@ -122,9 +122,31 @@
 
     .module-switcher{
 
+        &.show{
+            & .dropdown-toggle {
+                width:50px !important;
+                height: 50px !important;
+                @include border-radius(50px);
+                background-color: #e6efff;
+            }
+        }
+
         .dropdown-menu{
             padding: 6px !important;
             width:260px !important;
+           
+        }
+
+        .dropdown-menu {
+            &:before {
+                right:18px;
+            }
+        }
+
+        .dropdown-toggle {
+            width:50px !important;
+            height: 50px !important;
+            @include border-radius(50px);
            
         }
 
@@ -139,15 +161,19 @@
         }
 
         ul {
-            display: block;
-            height: auto;
-            clear: both;
+            display:flex;
+            flex-direction: row;
+            flex-wrap: wrap;
+            // display: block;
+            // height: auto;
+            // clear: both;
             margin:0;
             padding:0;
 
         li{
-            display:block;
-            width:33.33%;
+            // display:block;
+            flex:1 0 33.33%;
+            // width:100%;
             height:70px;
             // // background-color:$gray-600;
             //  border:1px solid #ccc;
@@ -157,17 +183,17 @@
             box-shadow: 0 0  0.5px 0 $gray-600;
             float: left;
             &:hover{
-                background-color:$gray-100;
+                background-color:lighten($cogent,45%);
                 cursor: pointer;
 
-                svg,span{
+                i,span{
                     color:$cogent;
                 }
             }
 
 
             a{
-                svg{
+                i{
                     position: absolute;
                     font-size: 22px;
                     top:30%;
@@ -185,7 +211,7 @@
                     
                 }
 
-                svg,span{
+                i,span{
                     color:$body-color;
                 }
             }
@@ -198,6 +224,10 @@
     // for profile details
 
     .user-profile ,.module-switcher{
+        &.show{
+            background-color: #e6efff;
+            @include border-radius(50%);        }
+
         &>.btn {
 
             width: 45px;
@@ -231,7 +261,8 @@
             
             min-width       : auto;
             border          : none;
-            box-shadow      : 1px 1px 8px 4px $gray-300;
+            //box-shadow      : 1px 1px 8px 1px $gray-300;
+            box-shadow      : 0px 4px 2px 0px $gray-400;
             padding         : 20px;
             background-color: $white;
             @include border-radius(5px !important);
@@ -246,33 +277,46 @@
 
             .avatar {
                 // position  : absolute;
-                margin-top   : 15px;
-                margin-bottom: 20px;
-                left         : 8px;
-                width        : 60px;
+                margin-top: 15px;
+                margin-bottom: 13px;
+                left: 8px;
+                width: 120px;
+                border-radius: 50%;
             }
 
             .user-name {
                 font-size    : 1rem;
                 line-height  : 1.6rem;
-                font-weight  : 400;
-                margin-bottom: 10px;
+                font-weight  : 600;
+                margin-bottom: 0px;
+                text-transform:capitalize;
             
             }
 
-            .depart-name {
+            .depart-name ,.profile-name{
                 font-size    : 0.85rem;
                 font-weight  : 400;
-                margin-bottom: 3px;
+                color:$gray-700;
+                text-transform:lowercase;
+                -webkit-text-transform:lowercase;
+                span{
+                    color:$gray-600;
+                }
+               
              
             }
 
+            .depart-name{
+                margin-bottom: 3px;
+            }
+
             .profile-name {
-                font-size    : 0.85rem;
-                font-weight  : 400;
-                margin-bottom: 20px;
+               
+                margin-bottom: 4px;
                
             }
+
+           
 
             .reset-password {
                 display: none;
