--- a/packages/common-sass/src/scss/custom-components/_aggrid.scss
+++ b/packages/common-sass/src/scss/custom-components/_aggrid.scss
@@ -82,6 +82,9 @@
       .first-class {
           padding-left: 30px;
       }
+      &:hover{
+        cursor: pointer;;
+      }
   }
 
   //custom
@@ -94,6 +97,8 @@
       font-weight   : 600;
       text-transform: uppercase;
       font-size     : 12px;
+      letter-spacing: 0.02rem;
+    
       border        : none;
       border-bottom : 1px solid $gray-200;
       // color      :$gray-800;
@@ -109,6 +114,14 @@
       border : none !important;
       outline: none;
   }
+
+  .ag-cell{
+      text-transform:lowercase;
+  }
+
+//   .ag-theme-balham .ag-ltr .ag-cell 
+
+
 
 //   .ag-header-row> {
 //       & :last-child {
