--- a/packages/common-sass/src/scss/pages/_dashboard.scss
+++ b/packages/common-sass/src/scss/pages/_dashboard.scss
@@ -1,9 +1,11 @@
 .dashboard-wrapper{
-    // padding:16px;
+    //padding:16px;
+    padding-top:20px;
 
     .unauthorized{
         // position: relative;
         padding:0;
+        @include border-radius (1rem);
     
         .filter-message{
             position: relative;
@@ -12,9 +14,9 @@
             margin-top:0px;
             left:50%;
             transform: translateX(-50%);
-            //@include border-radius(50%);
+            @include border-radius(0.5rem);
             // border-radius:50%;
-             background-color:#fff;
+             background-color:$white;
             // border:1px solid #ccc;
             h1{
                 margin-bottom:40px;
