--- a/packages/common-sass/src/scss/pages/_login.scss
+++ b/packages/common-sass/src/scss/pages/_login.scss
@@ -128,6 +128,17 @@ flex-direction:column;
   
 }
 
+// .logo-wrapper{
+// background-color:$gray-100;
+// width:48px;
+// height: 44px;
+// padding:2px;
+// display: inline-block;
+// border:1px solid $gray-400;
+// @include border-radius(50%);
+
+// }
+
 .waves {
 position:relative;
 width: 100%;
