--- a/packages/common-sass/src/scss/utilities/_titles.scss
+++ b/packages/common-sass/src/scss/utilities/_titles.scss
@@ -1,10 +1,11 @@
 h5.title{
-    
+
     text-transform: uppercase;
     color:lighten($body-color,0%);
     margin-bottom:14px;
     font-size:1rem;
     position: relative;
+    display: inline-block;
     //  padding-left:8px;
     // margin-left:-20px;
 
