doctor duty rooster add

--- a/packages/common-sass/src/scss/custom-components/_hybrid-input.scss
+++ b/packages/common-sass/src/scss/custom-components/_hybrid-input.scss
@@ -24,7 +24,8 @@
   top: 11px !important;
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
-  color: $gray-600;
+  color:$gray-600;
+  font-weight: 300;
   left: 8px;
   padding: 0 8px;
   -webkit-transition: transform 150ms cubic-bezier(0.4, 0, 0.2, 1), opacity 150ms cubic-bezier(0.4, 0, 0.2, 1);
