--- a/packages/common-sass/src/scss/custom-components/_hybrid-select.scss
+++ b/packages/common-sass/src/scss/custom-components/_hybrid-select.scss
@@ -39,6 +39,12 @@
     background-color: lighten($cogent,45%);
   }
 
+  .css-1wa3eu0-placeholder{
+    color:$gray-600;
+    font-weight: 300;
+
+  } 
+
   
 }
   
