--- a/packages/common-sass/src/scss/utilities/_titles.scss
+++ b/packages/common-sass/src/scss/utilities/_titles.scss
@@ -2,7 +2,7 @@ h5.title{
 
     text-transform: uppercase;
     color:lighten($body-color,0%);
-    margin-bottom:14px;
+    margin-bottom:24px;
     font-size:1rem;
     position: relative;
     display: inline-block;
@@ -13,9 +13,9 @@ h5.title{
     //     content:"";
     //     position: absolute;
     //     top:0px;
-    //     bottom:0px;
+    //     bottom:10px;
     //     left:0;
-    //     border-left:2px solid lighten($body-color,0%);
+    //     border-bottom:2px solid lighten($body-color,0%);
 
     // }
 }
