--- a/packages/common-sass/src/scss/_modal.scss
+++ b/packages/common-sass/src/scss/_modal.scss
@@ -42,7 +42,9 @@
     z-index: $zindex-modal-backdrop;
     width: 100vw;
     height: 100vh;
-    background-color: $modal-backdrop-bg;
+    background-color: #000;
+
+
   
     // Fade for backdrop
     &.fade { opacity: 1; }
@@ -54,11 +56,59 @@
 }
 
 .modal-backdrop {
-    z-index: $zindex-modal-backdrop;
-    background-color:#000;
+  
   
     // Fade for backdrop
     &.fade { opacity: 0; }
-    &.show { opacity: 0.7; }
+  
+
+    &.show {
+        opacity:0.7;
+        //-webkit-filter: blur(5px);
+        //filter: blur(5px);
+        //     /* All the background image supports */
+            // background-image: url("./../images/clinic.jpg");
+            // background-size: cover;
+            // background-repeat: no-repeat;
+            // background-position: center;
+        //     transform: translate(0px, 0px, 0px) ;
+        //     //  radient(to top right, rgba(43, 40, 50, 0.8) 0%, rgba(83, 86, 99, 0.8) 45%, rgba(69, 77, 91, 0.6) 60%);
+        //     position: absolute;
+        //     // width: 100%;
+        //     // height: 100%;
+            
+        //     /* blur filters */
+        //     -webkit-filter: blur(20px);
+        //     -o-filter: blur(20px);
+        //     filter: blur(20px);
+            
+        //     /* positioning and removing edges */
+        //     top: -70px;
+        //     right: -70px;
+        //     left: -70px;
+        //     padding: 70px;
+        //   }
+          
+        //   &.show:after {
+        //     content: '';
+        //     position: absolute;
+        //     height: 100%;
+        //     width: 100%;
+        //     z-index: 1001;
+          
+        //     /* Setting the gradient. Adds depth, and glass like effect. */
+        //     background-image: -webkit-linear-gradient(289deg, rgba(43,40,50,0.8) 0%, rgba(43,40,50,0.4) 46%, rgba(0,0,0,0.05) 50%);
+        //     background-image: -moz-linear-gradient(289deg, rgba(43,40,50,0.8) 0%, rgba(43,40,50,0.4) 46%, rgba(0,0,0,0.05) 50%);
+        //     background-image: -o-linear-gradient(289deg, rgba(43,40,50,0.8) 0%, rgba(43,40,50,0.4) 46%, rgba(0,0,0,0.05) 50%);
+        //     background-image: linear-gradient(-19deg, rgba(43,40,50,0.8) 0%, rgba(43,40,50,0.4) 46%, rgba(0,0,0,0.05) 50%);
+          
+        //     /* Blur to add depth. High to create smooth transition */
+        //     -webkit-filter: blur(70px);
+        //     -o-filter: blur(70px);
+        //     filter: blur(70px);
+          }
+          
+          
+    
   }
   
