--- a/packages/common-sass/src/scss/pages/_filter.scss
+++ b/packages/common-sass/src/scss/pages/_filter.scss
@@ -74,7 +74,7 @@
 
 .advanced-search{
     // border-bottom:1px solid $cogent-border;
-    padding:40px 20px;
+    padding:24px;
     background-color:$white;
     margin-bottom:1rem;
     position: relative;
