--- a/packages/common-sass/src/scss/pages/_profile-setup.scss
+++ b/packages/common-sass/src/scss/pages/_profile-setup.scss
@@ -1,5 +1,5 @@
 .add-container {
-    padding: 40px 24px;
+    padding: 24px;
     margin : 1rem 0;
 
     @include border-radius($cogent-radius);
@@ -290,7 +290,7 @@
 
 .manage-details {
     background-color: $white;
-    padding: 40px 24px;
+    padding: 24px;
     margin          : 1rem 0;
     @include border-radius($cogent-radius);
 
