--- a/packages/apps/admin/src/container/AdminSetup/admin-setup.scss
+++ b/packages/apps/admin/src/container/AdminSetup/admin-setup.scss
@@ -107,5 +107,30 @@
 
    }
 
+   .profile-list{
+       position: relative;
+
+       .profile-info{
+           position:absolute;
+           right:-30px;
+           top:5px;
+        //    color:$cogent;
+       }
+   }
+
+   .react-photo-gallery--gallery{
+      
+       text-align: center;
+       margin-bottom:20px;
+       
+       img{
+        width:140px;
+        height: 140px;
+        margin:0 auto !important;
+        @include border-radius(50%);
+
+       }
+   }
+
 
 
