--- a/packages/common-sass/src/scss/custom-components/_aggrid-action.scss
+++ b/packages/common-sass/src/scss/custom-components/_aggrid-action.scss
@@ -14,7 +14,7 @@
         &:focus,
         &:hover {
             outline   : 0;
-            box-shadow: 0 0 4px 1px $cogent-border;
+            box-shadow: 0 0 2px 5px $cogent-border;
         }
 
         &::after {
@@ -27,10 +27,10 @@
 
     .dropdown-menu {
         padding      : 0;
-        border-radius: 0 !important;
+        border-radius: 2px !important;
         min-width    : auto;
         z-index: 999999;
-        box-shadow: 0 0 4px 2px #ccc;
+        box-shadow: 0 0 4px 0px $gray-500;
         border:none;
     }
 
@@ -38,6 +38,7 @@
        padding:0.6rem 1rem 0.6rem 0.6rem;
         border-bottom:1px solid $cogent-border;
         line-height: 0.9rem;
+        text-transform: capitalize;
         &:hover {
             background-color: $cogent;
             color           : $white;
@@ -46,6 +47,7 @@
         svg{
             width:15px;
             height: auto;
+            margin-top:-2px;
           
         }
     }
