--- a/packages/common-sass/src/scss/custom.scss
+++ b/packages/common-sass/src/scss/custom.scss
@@ -27,6 +27,7 @@
 @import "./close";
 @import "./dropdown";
 @import "./error";
+@import "./forms";
 @import "./input-group";
 @import "./messages";
 @import "./modal";
