--- a/packages/ui-components/src/CImageUploadAndCrop/image-upload.scss
+++ b/packages/ui-components/src/CImageUploadAndCrop/image-upload.scss
@@ -16,8 +16,9 @@
 }
 
 .image-container{
-    min-width:400px;
-    min-height: 400px;
+  min-width:10rem;
+  min-height: 400px;
+
     background-color:#f0f2fc;
     display:block;
     margin-bottom:10px;
@@ -57,10 +58,12 @@
 
 }
 
-// .cropped-image-container{
-// align-self:center;
-
-// }
+.cropped-image-container{
+    position: relative;
+    width:100%;
+    height: 400px;
+   
+}
 
 .cropped-image{
     position: absolute;
@@ -70,6 +73,7 @@
     border:1px solid darken(#f0f2fc,10%);
     img{
         width:140px !important;
+        height: 100%;
         border-radius: 50%;
     }
     background-color:#f0f2fc;
@@ -85,5 +89,13 @@
         transform: translate(-50%,-50%);
         z-index: -1;
 
+    }
+}
+
+@media (max-width:992px){
+    .cropped-image-container{
+
+        height: 200px;
+       
     }
 }
