--- a/packages/common-sass/src/scss/custom-components/_hybrid-input.scss
+++ b/packages/common-sass/src/scss/custom-components/_hybrid-input.scss
@@ -32,6 +32,8 @@
   transition: transform 150ms cubic-bezier(0.4, 0, 0.2, 1), opacity 150ms cubic-bezier(0.4, 0, 0.2, 1);
   z-index: 1;
   text-align: left;
+  @include border-radius(4px);
+ 
 }
 
 .field-wrapper .field-placeholder span {
