--- a/packages/common-sass/src/scss/custom-components/_hybrid-select.scss
+++ b/packages/common-sass/src/scss/custom-components/_hybrid-select.scss
@@ -9,6 +9,7 @@
     background-color: white;
    font-size:0.65rem;
     padding:0 5px;
+    @include border-radius(4px);
   }
   
   .select-label.active {
