--- a/packages/common-sass/src/scss/pages/_login.scss
+++ b/packages/common-sass/src/scss/pages/_login.scss
@@ -128,6 +128,28 @@ flex-direction:column;
   
 }
 
+// .login-page-title{
+
+// }
+
+.password-requirement{
+  p{
+    margin-bottom:2px;
+    font-weight: 300;
+  }
+ul{
+  
+  li{
+    list-style-type: disc;
+    color:$gray-600;
+    font-size:12px;
+    margin-left: 16px;
+    font-weight: 300;
+  }
+}
+  
+}
+
 // .logo-wrapper{
 // background-color:$gray-100;
 // width:48px;
@@ -138,6 +160,11 @@ flex-direction:column;
 // @include border-radius(50%);
 
 // }
+
+/////////////////Background css/////////////////
+
+
+
 
 .waves {
 position:relative;
