--- a/packages/apps/admin/src/container/DoctorDutyRoster/doctor-duty-roster.scss
+++ b/packages/apps/admin/src/container/DoctorDutyRoster/doctor-duty-roster.scss
@@ -29,13 +29,16 @@
         font-weight: 600;
         text-transform: capitalize;
         margin-top:10px;
+        margin-bottom:10px;
       
         
     }
 
     .main-content{
-       margin-top:14px;
-       margin-bottom:14px;
+       margin-top:4px;
+       margin-bottom: 4px;
+       align-items:flex-start;
+    //    justify-content: flex-start;
 
        &:first-child{
            text-transform: capitalize;
@@ -52,11 +55,43 @@
  .doctor-override {
      padding:30px 40px;
     @include border-radius($cogent-radius);
+    .filter-message{
+        width:100%;
+    }
+ }
+ .preview-modal{
+     
+     .doctor-info,.doctor-availability,.doctor-override{
+         border:1px solid $cogent-border;
+         @include border-radius($cogent-radius);
+     }
+
+     .doctor-override{
+         margin:24px 15px 0;
+         padding:24px;
+     }
+     .doctor-availability .main-content{
+         margin-top:18px ;
+     }
  }
 
- .preview-modal{
-     .doctor-availability{
-         border:1px solid $cogent-border;
+ .override-form{
+     width:100%;
+     .react-datepicker-wrapper{
+         width:50%;
+         padding-left: 4px;
+     }
+     .time-picker{
+         display: inline-block;
+         width:50%;
+         .react-datepicker-wrapper{
+            width:100%
+        }
+     }
+
+     .form-check{
+         margin-left:14px;
+         height: 50px;
      }
  }
 
