--- a/packages/apps/admin/src/container/DoctorSetup/DoctorHoc.scss
+++ b/packages/apps/admin/src/container/DoctorSetup/DoctorHoc.scss
@@ -56,3 +56,17 @@ h5.title{
         border:none;
     }
 }
+
+.react-photo-gallery--gallery{
+      
+    text-align: center;
+    margin-bottom:20px;
+    
+    img{
+     width:140px;
+     height: 140px;
+     margin:0 auto !important;
+     @include border-radius(50%);
+
+    }
+}
