--- a/packages/common-sass/src/scss/pages/_dashboard.scss
+++ b/packages/common-sass/src/scss/pages/_dashboard.scss
@@ -1,6 +1,7 @@
 .dashboard-wrapper{
     //padding:16px;
     padding-top:20px;
+    margin-bottom:1.5rem;
 
     .unauthorized{
         // position: relative;
@@ -56,6 +57,163 @@
         }
     }
     
+}
+
+.dashboard-wrapper{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    
+    .revenue-box{
+        background-color:$white;
+         padding:30px;
+        // width:23%;
+        // height:100%;
+        margin:0px 0 15px;
+        flex-grow: 1;
+        flex-basis: 0;
+        justify-content: space-between;
+        @include border-radius(0.5rem);
+        text-align: center;
+
+        &:nth-child(2){
+            margin:15px;
+            margin-top:0
+        }
+        
+        &:nth-child(3){
+            margin:0px 15px 15px 0;
+        }
+
+        img{
+            width:30px;
+            
+            // display: none;
+           
+        }
+
+        p{
+            text-align: center;
+            font-size: 22px;
+            font-weight: 500;
+            
+        }
+
+        div{
+            text-align: center;
+            font-weight: 400;
+            // color:$black;
+
+            &.up{
+                color:$success;
+            }
+
+            &.down{
+                color:$danger;
+            }
+            .fa-chevron-up{
+                color:$success;
+                font-size: 20px;
+            }
+
+            .fa-chevron-down{
+                color:$danger;
+                font-size: 20px;
+            }
+        }
+
+        
+    }
+
+    .chart {
+        background-color:$white;
+        padding:20px 40px;
+        @include border-radius(0.5rem);
+        img{
+            width:100%;
+            height: auto;
+           
+        }
+
+        .btn{
+            margin-right:6px;
+            margin-bottom:4px;
+            float:right;
+        }
+    }
+
+
+    .overall-box{
+        background-color:$white;
+        padding:30px;
+        margin:0px 0 15px;
+        @include border-radius(0.5rem);
+        text-align: center;
+
+        img{
+            width:30px;
+            
+            // display: none;
+           
+        }
+
+        p{
+            text-align: center;
+            font-size: 22px;
+            font-weight: 500;
+            
+        }
+
+        .title{
+            text-align: center;
+            font-weight: 500;
+            font-size: 14px;
+            // color:$black;
+        }
+    }
+
+    .appointment-box{
+        background-color:$white;
+        padding:30px;
+        margin:0px 0 15px;
+        text-align: center;
+        @include border-radius(0.5rem);
+
+        .date{
+            width:48%;
+            padding:0;
+
+            &:first-child{
+                margin-right:2%;
+            }
+
+            &:last-child{
+                margin-left:2%;
+            }
+            .field-wrapper{
+                width:100%;
+                min-height: 34px;
+
+            }
+
+         
+            .hinput .form-control{
+                height: 34px;
+                padding:2px 6px;
+            }
+           
+        }
+
+        ul li{
+            width:50%;
+            display: inline-block;
+            text-align: center;
+            font-size: 14px;
+        }
+      
+    }
+    
+   
 }
 
 // .dashboard-image{
