--- a/packages/common-sass/src/scss/pages/_dashboard.scss
+++ b/packages/common-sass/src/scss/pages/_dashboard.scss
@@ -85,6 +85,12 @@
             margin:0px 15px 15px 0;
         }
 
+        .total{
+            font-size: 18px;
+            font-weight: 500;
+            color:$cogent;
+        }
+
         img{
             width:30px;
             
@@ -113,12 +119,12 @@
             }
             .fa-chevron-up{
                 color:$success;
-                font-size: 20px;
+                font-size: 18px;
             }
 
             .fa-chevron-down{
                 color:$danger;
-                font-size: 20px;
+                font-size: 18px;
             }
         }
 
@@ -198,10 +204,22 @@
 
          
             .hinput .form-control{
-                height: 34px;
+                height: 36px;
                 padding:2px 6px;
             }
            
+        }
+
+        .title{
+            font-size: 14px;
+            font-weight: 500;
+            margin:0;
+        }
+
+        p{
+            font-size: 22px;
+            font-weight: 500;
+            margin:0;
         }
 
         ul li{
@@ -209,6 +227,13 @@
             display: inline-block;
             text-align: center;
             font-size: 14px;
+            font-weight: 500;
+
+            span{
+                font-size: 18px;
+                font-weight: 600;
+            }
+           
         }
       
     }
