--- a/packages/apps/admin/src/container/DoctorDutyRoster/doctor-duty-roster.scss
+++ b/packages/apps/admin/src/container/DoctorDutyRoster/doctor-duty-roster.scss
@@ -35,8 +35,8 @@
     }
 
     .main-content{
-       margin-top:4px;
-       margin-bottom: 4px;
+       margin-top:14px;
+       margin-bottom: 14px;
        align-items:flex-start;
     //    justify-content: flex-start;
 
@@ -70,6 +70,47 @@
     
  }
  .preview-modal{
+
+    &.edit-doctordutyroster{
+        .time-picker{
+            .react-datepicker-popper[data-placement^="bottom"]{
+                margin-top:8px !important;
+            }
+        }
+
+        .doctor-availability{
+            .main-content{
+                .col{
+                    &:last-child{
+                        .form-check{
+                            margin-left:10px;
+                        }
+                    }
+                }
+            }
+        }
+    }
+
+    .date-error{
+        color:$danger;
+        margin-top:-32px;
+        font-weight: 400;
+        font-size:12px;
+     }
+    
+     .time-error{
+        color:$danger;
+        margin-top:-30px;
+        // margin-left:25%;
+        font-weight: 400;
+        font-size:12px;
+     }
+
+    .time-picker{
+        .react-datepicker-popper[data-placement^="bottom"]{
+            margin-top:-28px !important;
+        }
+    }
      
      .doctor-info,.doctor-availability,.doctor-override{
          border:1px solid $cogent-border;
@@ -77,7 +118,7 @@
      }
 
      .doctor-override{
-         margin:24px 15px 0;
+        //  margin:24px 15px 0;
          padding:24px;
      }
      .doctor-availability .main-content{
@@ -103,6 +144,21 @@
          margin-left:14px;
          height: 50px;
      }
+ }
+
+ .date-error{
+    color:$danger;
+    margin-top:-32px;
+    font-weight: 400;
+    font-size:12px;
+ }
+
+ .time-error{
+    color:$danger;
+    margin-top:-8px;
+    // margin-left:25%;
+    font-weight: 400;
+    font-size:12px;
  }
 
 
