--- a/packages/ui-components/src/CEnglishDatePicker/react-datepicker.scss
+++ b/packages/ui-components/src/CEnglishDatePicker/react-datepicker.scss
@@ -13,11 +13,11 @@ $datepicker__selected-color: red !important;
 
 
 .react-datepicker-popper{
-    z-index: 4;
+    z-index: 6 !important;
 }
 
 .react-datepicker-popper[data-placement^="bottom"]{
-    margin-top:-28px;
+    // margin-top:24px !important;
 }
 
 
@@ -25,6 +25,7 @@ $datepicker__selected-color: red !important;
  .react-datepicker__current-month{
         display: none !important;
     }
+
 .react-datepicker-wrapper {
    
 
@@ -57,7 +58,10 @@ $datepicker__selected-color: red !important;
 }
 
 .time-picker{
-    .react-datepicker-wrapper .field-wrapper{
+    .react-datepicker-popper[data-placement^="bottom"]{
+        margin-top:8px !important;
+    }
+    .react-datepicker-wrapper .field-wrapper,.react-datepicker-wrapper input{
         position: relative;
     
         &:before{
@@ -125,6 +129,10 @@ $datepicker__selected-color: red !important;
 
     background-color: $cogent;
   
+}
+
+.form-control[readonly]{
+    background-color:$white !important;
 }
          
  
