--- a/packages/apps/admin/src/container/DoctorDutyRoster/doctor-duty-roster.scss
+++ b/packages/apps/admin/src/container/DoctorDutyRoster/doctor-duty-roster.scss
@@ -37,7 +37,7 @@
     .main-content{
        margin-top:14px;
        margin-bottom: 14px;
-       align-items:flex-start;
+       align-items:center;
     //    justify-content: flex-start;
 
        &:first-child{
@@ -159,6 +159,11 @@
     // margin-left:25%;
     font-weight: 400;
     font-size:12px;
+ }
+
+ .fa-check-circle{
+     font-size:16px;
+     color:$success;
  }
 
 
