--- a/packages/common-sass/src/scss/pages/_dashboard.scss
+++ b/packages/common-sass/src/scss/pages/_dashboard.scss
@@ -76,6 +76,16 @@
         @include border-radius(0.5rem);
         text-align: center;
 
+        &:first-child{
+            background-color:darken($warning,0%);
+            p{
+                color:$black;
+            }
+            .total{
+                color:$black;
+            }
+        }
+
         &:nth-child(2){
             margin:15px;
             margin-top:0
@@ -86,7 +96,7 @@
         }
 
         .total{
-            font-size: 18px;
+            font-size: 14px;
             font-weight: 500;
             color:$cogent;
         }
@@ -102,6 +112,7 @@
             text-align: center;
             font-size: 22px;
             font-weight: 500;
+            margin-bottom:0;
             
         }
 
@@ -186,27 +197,14 @@
         @include border-radius(0.5rem);
 
         .date{
-            width:48%;
-            padding:0;
+          &>div{
+              text-align:right;
+              font-size: 10px;
 
-            &:first-child{
-                margin-right:2%;
-            }
-
-            &:last-child{
-                margin-left:2%;
-            }
-            .field-wrapper{
-                width:100%;
-                min-height: 34px;
-
-            }
-
-         
-            .hinput .form-control{
-                height: 36px;
-                padding:2px 6px;
-            }
+              span{
+                  font-weight:600;
+              }
+          }
            
         }
 
