--- a/packages/ui-elements/src/CMenuSearch/search.scss
+++ b/packages/ui-elements/src/CMenuSearch/search.scss
@@ -1,4 +1,12 @@
 
+@import '~bootstrap/scss/functions';
+
+//custom colors
+@import "~@frontend-appointment/common-sass/src/scss/variables/custom-variables";
+
+// // Customized Bootstrap variables
+@import "~@frontend-appointment/common-sass/src/scss/variables/custom-bootstrap-variable";
+@import '~bootstrap/scss/mixins';
 // .search-comp.input-group{
 //   display:flex;
 //   min-width:200px;
@@ -71,52 +79,71 @@ input::-webkit-input-placeholder {
 
 /* Demo 2 */
 
-#expandible-search{
+#menu-search{
   width: auto;
   display: flex;
   flex-basis: 1;
   flex-direction: row-reverse;
   position: relative;
+  @include border-radius(50%);
+  margin-right:8px;
 }
 
-#expandible-search input[type=search] {
-	width:32px;
-	color: transparent;
+#menu-search input[type=search] {
+	width:40px;
 	cursor: pointer;
-	
 
-	background: #fff url(./search.svg) no-repeat left    center;
-	background-size:26px 16px;
+	background: transparent url(./search.svg) no-repeat left    center;
+	background-size:36px 18px;
 	border:1px solid transparent;
-	padding: 4px 2px;
+	padding: 10px 6px;
 	box-sizing:border-box;
+	height:auto;
+	@include border-radius(50%);
 	
-	-webkit-border-radius: 2px;
-	-moz-border-radius: 2px;
-	border-radius: 2px;
+	// -webkit-border-radius: 2px;
+	// -moz-border-radius: 2px;
+	// border-radius: 2px;
 	
 	-webkit-transition: all .5s;
 	-moz-transition: all .5s;
 	transition: all .5s;
 }
-#expandible-search input[type=search]:hover {
+#menu-search input[type=search]:hover {
 	background-color: #fff;
+	-webkit-border-radius: 22px;
+	-moz-border-radius: 22px;
+	border-radius: 22px;
 }
-#expandible-search input[type=search]:focus {
+#menu-search input[type=search]:focus {
 	width: 100%;
 	background-color: #fff;
 	border: 1px solid  #e9ecef !important;
-	padding:4px 2px;
+	padding: 8px 4px;
 	padding-left: 32px;
 	color: #000;
 	cursor: auto;
+	-webkit-border-radius: 22px;
+	-moz-border-radius: 22px;
+	border-radius: 22px;
 
 
 }
-#expandible-search input:-moz-placeholder {
-	color: transparent;
+
+#menu-search input.active::-moz-placeholder {
+color:$gray-800;
 }
-#expandible-search input::-webkit-input-placeholder {
-	color: transparent;
+
+#menu-search input.active::-webkit-input-placeholder {
+color:$gray-800;
+}
+
+#menu-search input::-moz-placeholder {
+	display: none;
+	color:transparent;
+}
+#menu-search input::-webkit-input-placeholder {
+	display:none;
+	color:transparent;
 }
 
