--- a/packages/common-sass/src/scss/_topbar.scss
+++ b/packages/common-sass/src/scss/_topbar.scss
@@ -97,6 +97,21 @@
 
         .dropdown-menu {
             width        : 300px;
+        
+                &:before {
+                    content      : '';
+                    width        : 0;
+                    height       : 0;
+                    border-left  : 8px solid transparent;
+                    border-right : 8px solid transparent;
+                    border-bottom: 6px solid $white;
+                    position     : absolute;
+                    display      : block;
+                    top          : -6px;
+                    left           :110px;
+                    
+                }
+          
 
             li{
                 padding:14px ; 
