--- a/packages/common-sass/src/scss/pages/_dashboard.scss
+++ b/packages/common-sass/src/scss/pages/_dashboard.scss
@@ -3,6 +3,15 @@
     padding-top:20px;
     margin-bottom:1.5rem;
 
+    h5.title{
+        color:desaturate($cogent,60%);
+        margin-top:22px;
+        margin-bottom:22px;
+        font-weight: 500;
+        font-size: 18px;
+        font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    }
+
     .unauthorized{
         // position: relative;
         padding:0;
@@ -77,7 +86,7 @@
         text-align: center;
 
         &:first-child{
-            background-color:darken($cogent,0%);
+            background-color:lighten($cogent,10%);
             p{
                 color:$white;
             }
@@ -161,7 +170,7 @@
         }
 
         .btn{
-            margin-right:6px;
+            // margin-right:6px;
             margin-bottom:4px;
             float:right;
         }
@@ -204,17 +213,7 @@
         text-align: center;
         @include border-radius(0.5rem);
 
-        .date{
-          &>div{
-              text-align:right;
-              font-size: 10px;
-
-              span{
-                  font-weight:600;
-              }
-          }
-           
-        }
+        
 
         .doughnut-chart{
             width:60%;
@@ -238,12 +237,12 @@
             display: inline-block;
             text-align: center;
             font-size: 14px;
-            font-weight: 500;
-            color:$gray-900;
+            font-weight: 400;
+            color:$gray-700;
 
             span{
                 font-size: 18px;
-                color:$gray-600;
+                color:$gray-700;
                 font-weight: 400;
             }
            
@@ -269,6 +268,18 @@
         }
       
     }
+
+    .date{
+        &>div{
+            text-align:right;
+            font-size: 10px;
+
+            span{
+                font-weight:600;
+            }
+        }
+         
+      }
     
    
 }
