--- a/packages/apps/admin/src/container/AppointmentRefund/appointment-refund.scss
+++ b/packages/apps/admin/src/container/AppointmentRefund/appointment-refund.scss
@@ -8,45 +8,49 @@
  @import "~@frontend-appointment/common-sass/src/scss/variables/custom-bootstrap-variable";
  @import '~bootstrap/scss/mixins';
 
-
- .appointment-badge{
-    float: right;  
-    margin:10px 0;
+ #appointment-refund{
+    .appointment-badge{
+        float: right;  
+        margin:10px 0;
+        
+            &>span{
+             margin-right:20px;
+             height: auto;
+             line-height: 40px;
     
-        &>span{
-         margin-right:20px;
-         height: auto;
-         line-height: 40px;
-
-         &:last-child{
-             margin-right: 0;
+             &:last-child{
+                 margin-right: 0;
+             }
          }
-     }
-
-}
-
-.badge{
-    width:35px;
-    height: 35px;
-    // top:50%;
-    // left:50%;
-    // transform:translate(-50%,-50%);
-    text-align: center;
-    vertical-align: middle;
-    font-size: 16px;
-    line-height: 22px;
-    padding:6px;
-    @include border-radius(50%);
-}
-
-.react-datepicker-wrapper{
-    width:50%;
-    // padding-left: 4px;
-}
-
-@media (max-width: 1199px) { 
-    .hide-on-md{
-      display:none;
+    
     }
-  }
+    
+    .badge{
+        width:35px;
+        height: 35px;
+        // top:50%;
+        // left:50%;
+        // transform:translate(-50%,-50%);
+        text-align: center;
+        vertical-align: middle;
+        font-size: 16px;
+        line-height: 22px;
+        padding:6px;
+        @include border-radius(50%);
+    }
+    
+    .react-datepicker-wrapper{
+        width:50%;
+        // padding-left: 4px;
+    }
+    
+    @media (max-width: 1199px) { 
+        .hide-on-md{
+          display:none;
+        }
+      }
+    
+    
+ }
 
+ 
