--- a/packages/apps/admin/src/container/DepartmentSetup/department-setup.scss
+++ b/packages/apps/admin/src/container/DepartmentSetup/department-setup.scss
@@ -8,31 +8,34 @@
  @import "~@frontend-appointment/common-sass/src/scss/variables/custom-bootstrap-variable";
  @import '~bootstrap/scss/mixins';
 
+// .department-setup{
 
-
-h5.title{
-    // color:$cogent;
-    // background-color:$white;
-    // @include border-radius($cogent-radius);
-    display: inline-block !important;
-}
-
-.form-check{
-    margin-top:-6px;
-    input{
-        margin-top:1px;
+    h5.title{
+        // color:$cogent;
+        // background-color:$white;
+        // @include border-radius($cogent-radius);
+        display: inline-block !important;
     }
-}
-
-.preview-modal{
-    label{
-        margin-bottom:0rem;
-    }
+    
     .form-check{
-        // margin-top:-2px;
+        margin-top:-6px;
         input{
             margin-top:1px;
         }
     }
-}
+    
+    .preview-modal{
+        label{
+            margin-bottom:0rem;
+        }
+        .form-check{
+            // margin-top:-2px;
+            input{
+                margin-top:1px;
+            }
+        }
+    }
+    
+    
+// }
 
