--- a/packages/common-sass/src/scss/custom-components/_aggrid.scss
+++ b/packages/common-sass/src/scss/custom-components/_aggrid.scss
@@ -18,7 +18,7 @@
   $hover-color             : lighten($cogent, 45%);
   $border-color            :$cogent-border;
   $header-background-color :$white;
-  $header-foreground-color :lighten($body-color, 20%);
+  $header-foreground-color :lighten($body-color, 10%);
   $odd-row-background-color:$white;
   $selected-color          : lighten($cogent, 40%);
 
@@ -94,8 +94,8 @@
   // }
 
   .ag-theme-balham .ag-header {
-      font-weight   : 600;
-      text-transform: uppercase;
+      font-weight   : 500;
+      text-transform: capitalize;
       font-size     : 12px;
       letter-spacing: 0.02rem;
     
