--- a/packages/common-sass/src/scss/variables/_custom-variables.scss
+++ b/packages/common-sass/src/scss/variables/_custom-variables.scss
@@ -24,7 +24,7 @@ $yahoo:          #400191 !default;
 $behance:        #1769ff !default;
 $dropbox:        #007ee5 !default;
 $reddit:         #ff4500 !default;
-$spotify:        #7ab800 !default;
+$spotify:        #1db954 !default;
 $vine:           #00bf8f !default;
 $foursquare:     #1073af !default;
 $vimeo:          #aad450 !default;
